# ytworkflo

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  main.py
app/core/: config.py  exceptions.py
app/models/: schemas.py
app/routers/: analytics.py  audio.py  batch.py  channel.py  comments.py  download.py  formats.py  playlist.py  search.py  stream.py  subtitles.py  thumbnails.py  transcript.py  trending.py  video.py
app/services/: ytdlp_service.py
tests/: test_api.py
